--- a/google-play-store-apps.ipynb
+++ b/google-play-store-apps.ipynb
@@ -598,6 +598,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Predict model"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 267,
    "metadata": {},
