--- a/google-play-store-apps.ipynb
+++ b/google-play-store-apps.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Google Play Store Apps"
+    "# NLP App recommendation"
    ]
   },
   {
